# Agent-Terminal-Contact

./: .gitignore  README.md  V0_SPEC.md  artifact_ownership.json  pyproject.toml
docs/agent-context/: SLICE_WATCHLIST.md  slice-watchlist.jsonl
scripts/: install.ps1  install.sh
skills/agent-tmux-control/: SKILL.md
src/agent_terminal_contact/: __init__.py  artifact_ownership.py  classifier.py  cli.py  runner.py  session.py  tmux_transport.py
tests/: test_artifact_ownership.py  test_classifier.py  test_cli.py  test_session.py  test_skill_contract.py
