[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-terminal-contact"
version = "0.1.0"
description = "Guarded contact layer for live terminal agents"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
agent-contact = "agent_terminal_contact.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
